# mercurial-dynamic-amm-sdk

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/actions/setup-dep/: action.yml
.github/actions/setup-solana/: action.yml
.github/workflows/: ci_cd_ts_main.yml  ci_rust.yml  ci_rust_nonmain_on_push.yml  ci_ts.yml  ci_ts_non_main.yml  ci_ts_nonmain_on_push.yml  cicd_rust_main_on_push.yml  cicd_ts_main_on_push.yml
dynamic-amm-quote/: Cargo.toml
dynamic-amm-quote/src/: lib.rs
dynamic-amm-quote/src/curve/: curve_type.rs  fees.rs  mod.rs
dynamic-amm-quote/src/depeg/: marinade.rs  mod.rs  solido.rs  spl_stake.rs
dynamic-amm-quote/src/math/: mod.rs  stable_swap.rs
dynamic-amm-quote/tests/: test_quote.rs
dynamic-amm-quote/tests/fixtures/accounts/: 21bR3D4QR4GzopVco44PVMBXwHFpSYrbrdeNwdKk7umb.json  3ifhD4Ywaa8aBZAaQSqYgN4Q1kaFArioLU8uumJMaqkE.json  8p1VKP45hhqq5iZG5fNGoi7ucme8nFLeChoDWNy7rWFm.json  8szGkuLTAux9XMgZ2vtY39jVSowEcpBfFfD8hXSEqdGC.json  AYX6kFvQRacdbC1eBaK5kgEPGjzjYYd1fyduHg55Z1ai.json  B2uEs9zjnz222hfUaUuRgesryUEYwy3JGuWe31sE9gsG.json  FERjPVNEa7Udq8CEv68h6tPL46Tq7ieE49HrE2wea3XT.json  GGG4DxkYa86g2v4KwtvR8Xu2tXEp1xd4BRC3yNnpve3g.json  GYuyKhedWVsndqG5tyXwRiRSTxFKrLJysgedccqU7aH8.json  HWnWnLvBzvSmXH5hnHJCFmuQbDTsX3Ba2w9CPE5zf4YD.json  HZeLxbZ9uHtSpwZC3LBr4Nubd14iHwz7bRSghRZf5VCG.json  HcjZvfeSNJbNkfLD4eEcRBr96AD3w1GpmMppaeRZf7ur.json  mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So.json
fixtures/accounts/: FZN7QZ8ZUUAxMPfxYEYkH3cXUASzH8EqA6B4tyCL8f1j.json
idl/: amm.json
programs/amm/: Cargo.toml  README.md
programs/amm/src/: constants.rs  context.rs  error.rs  event.rs  lib.rs  state.rs  utils.rs  vault_utils.rs
programs/amm/src/curve/: curve_type.rs  fees.rs  mod.rs
programs/amm/src/curve/depeg/: marinade.rs  mod.rs  solido.rs
programs/amm/src/depeg/: marinade.rs  mod.rs  solido.rs  spl_stake.rs
programs/amm/src/math/: constant_product.rs  mod.rs  stable_swap.rs
programs/amm/tests/: test_quote.rs
programs/amm/tests/fixtures/: 21bR3D4QR4GzopVco44PVMBXwHFpSYrbrdeNwdKk7umb.json  24NYE3hHQyUTrHUT4n1CcVrMP9Xy3ULuT1Uurw1HDeck.json  24eCZN6iFJYhveH9i7jiTAD41R7Qn2cXSWVpvaVCfwoa.json  28KR3goEditLnzBZShRk2H7xvgzc176EoFwMogjdfSkn.json  32D4zRxNc1EssbJieVHfPhZM3rH6CzfUPrWUuWxD9prG.json  3ESUFCnRNgZ7Mn2mPPUMmXYaKU8jpnV9VtA17M7t2mHQ.json  3RpEekjLE5cdcG15YcXJUpxSepemvq2FpmMcgo342BwC.json  3WGuxJdoBxjiBMKnQqSRKAo8NqpHTnf7BXn5SgB4boc5.json  3dixrBJmfV1yRgJD6AoNLHt1pLCXiZr1M9seUNihcbw9.json  3gkFA4uw3mc4Qi7ciKhwpDL7J6pc8xUrbUgUCsTBodkv.json  3ifhD4Ywaa8aBZAaQSqYgN4Q1kaFArioLU8uumJMaqkE.json  477ca1hS4AqiVgB2ehpqQoM8VNUhNMZ7L37Bx5iSAgCg.json  49Yi1TKkNyYjPAFdR9LBvoHcUjuPX4Df5T5yv39w2XTn.json  5XCP3oD3JAuQyDpfBFFVUxsBxNjPQojpKuL4aVhHsDok.json  5buFqbdUMafd5r7x4SDBXdnZHcZnAVcrz1F5GhbW1MCJ.json  5yuefgbJJpmFNK2iiYbLSpv1aZXq7F9AUKkZKErTYCvs.json  63sCov3VofCy7usVSzcdKYxzc6osp31pBY3YBT9XadVm.json  7EJSgV2pthhDfb4UiER9vzTqe2eojei9GEQAQnkqJ96e.json  7LHUMZd12RuanSXhXjQWPSXS6QEVQimgwxde6xYTJuA7.json  7dHbWXmci3dT8UFYWYZweBLXgycu7Y3iL6trKn1Y7ARj.json  8fgXF4Ap8FM26zX7LxWWiEd25SQ6SSBsBsumkMRjGqVE.json  8p1VKP45hhqq5iZG5fNGoi7ucme8nFLeChoDWNy7rWFm.json  8szGkuLTAux9XMgZ2vtY39jVSowEcpBfFfD8hXSEqdGC.json  9CopBY6iQBaZKAhhQANfy7g4VXZkx9zKm8AisPd5Ufay.json  BbRTJbmwBpmF8K6cbVNZLtCVzQczVdBoQS3aFZXxt1qB.json  C2QoQ111jGHEy5918XkNXQro7gGwC9PKLXd1LqBiYNwA.json  CGY4XQq8U4VAJpbkaFPHZeXpW3o4KQ5LowVsn6hnMwKe.json  CKrWYuW3xZvqG5otsRbsCcoaAufF2oTAPKpjXtmtofFB.json  CNc2A5yjKUa9Rp3CVYXF9By1qvRHXMncK9S254MS9JeV.json  CTm5QdMS6KisPnUFbfn9Eacga9R7yAZ67WwqFNqDXrVN.json  D6uDyjtptL5Mr267BiLZJF4y3tNVm8RwT31KM9W5t6ZA.json  DQjGWHN9ERn1zSMpWLNvSpTFUSfnxbanBt9A7xyU2bVE.json  DzrQZb6jj9GeLV5DgcD9v2L2TcJyTYxfcBUaXkmDbXVF.json  EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v.json  ERgpKaq59Nnfm9YRVAAhnq16cZhHxGcDoDWCzXbhiaNw.json  EZun6G5514FeqYtUv26cBHWLqXjAEdjGuoX6ThBpBtKj.json  Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB.json  FERjPVNEa7Udq8CEv68h6tPL46Tq7ieE49HrE2wea3XT.json  FZN7QZ8ZUUAxMPfxYEYkH3cXUASzH8EqA6B4tyCL8f1j.json  GGG4DxkYa86g2v4KwtvR8Xu2tXEp1xd4BRC3yNnpve3g.json  (+11 more)
programs/dynamic-amm/: Cargo.toml
programs/dynamic-amm/src/: constants.rs  error.rs  event.rs  lib.rs  state.rs
programs/dynamic-amm/src/instructions/: add_balance_liquidity.rs  bootstrap_liquidity.rs  claim_fee.rs  close_config.rs  create_config.rs  create_lock_escrow.rs  create_mint_metadata.rs  enable_pool.rs  get_pool_info.rs  initialize_customizable_permissionless_constant_product_pool.rs  initialize_permissioned_pool.rs  initialize_permissionless_pool.rs  initialize_permissionless_pool_with_config.rs  lock.rs  mod.rs  override_curve_param.rs  partner_claim_fees.rs  remove_liquidity_single_side.rs  set_pool_fee.rs  swap.rs  transfer_admin.rs  update_activation_point.rs
programs/dynamic-vault/: Cargo.toml
programs/dynamic-vault/src/: lib.rs  seed.rs  state.rs
rust-client/: Cargo.toml  README.md
rust-client/src/: fee_estimation.rs  file.rs  lib.rs  main.rs  math.rs  rpc.rs  state.rs  transaction_utils.rs
rust-client/src/instructions/: mod.rs
rust-client/src/instructions/dynamic_amm/: create_pool.rs  deposit.rs  get_pool_info.rs  mod.rs  pda.rs  quote.rs  swap.rs  withdraw.rs
tests/: mercurial-dynamic-amm-sdk.ts
ts-client/: Anchor.toml  README.md  index.ts  jest.config.js  justfile  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.dev.json  tsconfig.json
ts-client/src/: constants.ts  pool.ts
ts-client/src/amm/: constants.ts  error.ts  idl.ts  index.ts  marinade-finance.json  utils.ts  vault-idl.ts
ts-client/src/amm/curve/: index.ts  (+2 more)
ts-client/src/curve/: constant-product.ts  index.ts  stable-swap.ts
ts-client/src/examples/: create_pool_and_lock_liquidity.ts  create_pool_with_authorized_config.ts  get_claimable_fee.ts  get_pool_info.ts  swap.ts  swap_quote.ts
ts-client/src/idl/: amm.ts  marinade-finance.json
ts-client/src/types/: pool_spl.ts  pool_state.ts  vault_spl.ts
ts-client/src/vault-deps/: constants.ts  utils.ts  vault.ts  vault_state.ts
ts-client/tests/: pool.test.ts
(+85 files in other folders)
