[package]
name = "rust-client"
version = "0.3.7"
edition = "2018"

[features]
devnet = []

[dependencies]
anchor-lang = {version = "0.26.0"}
solana-sdk = "1.14.17"
anchor-spl = {version = "0.26.0"}
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mercurial-vault = { version="0.4.4", features = ["cpi"] }
mercurial-amm = { path = "../programs/amm", features = ["cpi"] }
anyhow = "1.0"
bincode = "1.3.3"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"