[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-client = "0.28.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
solana-program = { version = "=1.16.16" }
solana-rpc-client = { version = "=1.16.16" }
solana-sdk = { version = "=1.16.16" }
spl-associated-token-account = "2.2.0"
anyhow = "1.0.57"
spl-token = "3.5.0"
bincode="1.3.3"
serde = "1.0.137"
serde_json = "1.0.102"
mpl-token-metadata = "3.2.3"
prog_dynamic_amm={path="../programs/dynamic-amm", package="dynamic-amm"}
prog_dynamic_vault={path="../programs/dynamic-vault", package="dynamic-vault"}
regex = "1"
dynamic-amm-quote={path="../dynamic-amm-quote"}