[package]
name = "mercurial-amm"
version = "0.4.8"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
staging = []
test-bpf = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mercurial-vault = { version="0.4.6", features = ["cpi"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
stable-swap-math = { git="https://github.com/mercurial-finance/stable-swap", rev = "f49a9166fd1b7afd14dded3cdd600fb19b4c6982" }
stable-swap-client = { git="https://github.com/mercurial-finance/stable-swap", rev = "f49a9166fd1b7afd14dded3cdd600fb19b4c6982" }
marinade-sdk = { git="https://github.com/mercurial-finance/marinade-sdk", rev = "93313bcaab59a69ca57d43cc6088ab6b99b67997", features = ["cpi"] }
spl-stake-pool = { ver="0.6.4", features = ["no-entrypoint"] }
anyhow = "1.0.71"

[dev-dependencies]
solana-program-test = "1.14.17"
solana-sdk = "1.14.17"
solana-account-decoder = "1.14.17"
solana-client = "1.14.17"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
serde_json = "1.0.95"
serde = "1.0.159"
bincode = "1.3.3"